hphp/test/quick/strict_numbers.php.expectf
HipHop Fatal error: syntax error, unexpected T_STRICT_ERROR in %s on line 2
